# lanis-mcp

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-mcp.yml  mise.toml  pyproject.toml  renovate.json
.github/workflows/: ci.yml
src/lanis_mcp/: __init__.py  client.py  server.py
tests/: test_lanis.py
