[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lanis-mcp"
version = "0.1.0"
description = "MCP server for Schulportal Hessen (Lanis)"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "lanisapi==0.4.1",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "anyio"]

[project.scripts]
lanis-mcp = "lanis_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lanis_mcp"]

[tool.hatch.envs.default]
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # lanisapi passes cookies per-request to httpx, which is deprecated in newer
    # httpx versions. This is a third-party issue we cannot fix upstream.
    "ignore::DeprecationWarning:httpx",
]
